// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@trigen/scripts-preset-react-app webpack should place build plugins in correct order 1`] = `
Array [
  "CleanWebpackPlugin",
  "HashedModuleIdsPlugin",
  "HtmlWebpackPlugin",
  "ScriptExtHtmlWebpackPlugin",
  "HtmlWebpackExcludeAssetsPlugin",
  "BdslWebpackPlugin",
  "EnvironmentPlugin",
  "DefinePlugin",
  "FilterWarningsPlugin",
  "CopyPlugin",
  "ForkTsCheckerWebpackPlugin",
  "WorkboxWebpackPlugin",
  "StylelintWebpackPlugin",
  "StylableWebpackPlugin",
  "FilterChunkWebpackPlugin",
]
`;

exports[`@trigen/scripts-preset-react-app webpack should place dev plugins in correct order 1`] = `
Array [
  "HotModuleReplacementFilterPlugin",
  "HotModuleReplacementPlugin",
  "HtmlWebpackPlugin",
  "EnvironmentPlugin",
  "DefinePlugin",
  "FilterWarningsPlugin",
  "CopyPlugin",
  "ForkTsCheckerWebpackPlugin",
  "WorkboxWebpackPlugin",
  "StylelintWebpackPlugin",
  "StylableWebpackPlugin",
]
`;

exports[`@trigen/scripts-preset-react-app webpack should place render plugins in correct order 1`] = `
Array [
  "CleanWebpackPlugin",
  "HashedModuleIdsPlugin",
  "EnvironmentPlugin",
  "DefinePlugin",
  "FilterWarningsPlugin",
  "CopyPlugin",
  "ForkTsCheckerWebpackPlugin",
  "WorkboxWebpackPlugin",
  "StylableWebpackPlugin",
]
`;
